# credential-briefcase

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  security.yml
apps/agent-access-gateway/: Cargo.toml
apps/agent-access-gateway/src/: main.rs
apps/briefcase-cli/: Cargo.toml
apps/briefcase-cli/src/: main.rs
apps/briefcase-control-plane/: Cargo.toml
apps/briefcase-control-plane/src/: main.rs
apps/briefcase-extension/: package.json  tsconfig.json
apps/briefcase-extension/e2e/: popup.spec.ts
apps/briefcase-extension/extension/: manifest.json  popup.css  popup.html
apps/briefcase-extension/scripts/: build.mjs
apps/briefcase-extension/src/: openapi.spec.ts
apps/briefcase-extension/src/extension/: background.ts  native.ts  popup.ts
apps/briefcase-mobile-signer/android/: README.md  settings.gradle.kts
apps/briefcase-mobile-signer/android/app/: build.gradle.kts
apps/briefcase-mobile-signer/android/app/src/main/: AndroidManifest.xml
apps/briefcase-mobile-signer/android/app/src/main/java/com/credentialbriefcase/mobilesigner/: Base64Url.kt  BriefcasedClient.kt  BriefcasedModels.kt  KeystoreSigner.kt  MainActivity.kt  NoiseNNpsk0.kt  PairingPayload.kt
apps/briefcase-mobile-signer/android/app/src/main/res/values/: strings.xml
apps/briefcase-mobile-signer/android/gradle/wrapper/: gradle-wrapper.properties
apps/briefcase-mobile-signer/ios/: README.md  project.yml
apps/briefcase-mobile-signer/ios/BriefcaseMobileSigner/: Info.plist
apps/briefcase-mobile-signer/ios/BriefcaseMobileSigner/App/: BriefcaseMobileSignerApp.swift  RootView.swift
apps/briefcase-mobile-signer/ios/BriefcaseMobileSigner/Core/: Base64URL.swift  BriefcasedClient.swift  BriefcasedModels.swift  JSONValue.swift  NoiseNNpsk0.swift  PairingPayload.swift  SignerKey.swift  SignerModel.swift
apps/briefcase-mobile-signer/ios/BriefcaseMobileSigner/UI/: ApprovalsView.swift  PairingView.swift  QRScannerView.swift
apps/briefcase-payment-helper/: Cargo.toml
apps/briefcase-payment-helper/src/: main.rs
apps/briefcase-ui/src/: main.rs
apps/briefcased/: Cargo.toml  build.rs
apps/briefcased/src/: app.rs  control_plane.rs  db.rs  firewall.rs  host.rs  lib.rs  main.rs  middleware.rs  net_policy.rs  pairing.rs  provider.rs  remote_mcp.rs  tools.rs
apps/briefcased/wasm/: forward_fs_read.wat  forward_http_request.wat
apps/mcp-gateway/: Cargo.toml
apps/mcp-gateway/src/: main.rs
apps/native-messaging-host/: Cargo.toml
apps/native-messaging-host/src/: lib.rs  main.rs
apps/native-messaging-host/tests/: host_e2e_unix.rs
crates/briefcase-api/: Cargo.toml
crates/briefcase-api/src/: client.rs  lib.rs  types.rs
crates/briefcase-conformance/: Cargo.toml
crates/briefcase-conformance/src/: lib.rs  provider_contract.rs
crates/briefcase-control-plane-api/: Cargo.toml
crates/briefcase-control-plane-api/src/: client.rs  lib.rs  types.rs
crates/briefcase-core/src/: lib.rs  tool_manifest.rs  types.rs
crates/briefcase-core/tests/: docs_profile_consistency.rs
crates/briefcase-dpop/: Cargo.toml
crates/briefcase-dpop/src/: lib.rs
crates/briefcase-keys/: Cargo.toml
crates/briefcase-keys/src/: lib.rs  remote.rs  tpm2.rs  windows.rs
crates/briefcase-keys/tests/: remote_signer_dpop.rs  tpm2_swtpm.rs  windows_cng.rs
crates/briefcase-mcp/: Cargo.toml
crates/briefcase-mcp/src/: http_client.rs  jsonrpc.rs  lib.rs  server.rs  sse.rs  types.rs
crates/briefcase-oauth-discovery/: Cargo.toml
crates/briefcase-oauth-discovery/src/: lib.rs
crates/briefcase-otel/: Cargo.toml
crates/briefcase-otel/src/: lib.rs
crates/briefcase-payments/: Cargo.toml  build.rs
crates/briefcase-payments/proto/lnd/: lightning.proto
crates/briefcase-payments/src/: helper_protocol.rs  l402.rs  l402_cln.rs  l402_lnd.rs  lib.rs
crates/briefcase-policy/src/: cedar_engine.rs  lib.rs
crates/briefcase-sandbox/: Cargo.toml
crates/briefcase-sandbox/src/: lib.rs
deploy/: docker-compose.enterprise.yml
docker/control-plane/: Dockerfile
docker/enterprise/: run-tests.sh
docker/lightning-regtest/: docker-compose.yml  run-tests.sh
docker/softhsm/: run-tests.sh
docker/swtpm/: Dockerfile  run-tests.sh
docker/x402-harness/: run-tests.sh
docs/: ARCHITECTURE.md  CAPABILITY_TOKENS.md  COMPATIBILITY_PROFILE.md  GA_SIGNOFF_v1.0.0.md  OBSERVABILITY.md  OPERATIONS.md  PAIRING.md  POLICY.md  RELEASING.md  SUPPORT_MATRIX.md  THREAT_MODEL.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: mcp_parsing.rs  payments_parsing.rs  receipts_ingest.rs
openapi/: briefcased.yaml
packaging/native-messaging/: README.md
packaging/native-messaging/chrome/: com.briefcase.credential_briefcase.json
packaging/systemd/: briefcased.service
scripts/: check_ga_signoff.sh  ga_qualification.sh  release_manifest.sh  run_security_assessment.sh  security_review_packet.sh  validate_support_matrix.sh
specs/: .current-spec
specs/portable-briefcase-sop-full/: .progress.md  design.md  requirements.md  research.md  tasks.md
specs/portable-briefcase-v1/: requirements.md  research.md
specs/universal-agentic-auth-ga/: .progress.md  design.md  requirements.md  research.md  tasks.md
tests/signer_sim/: sim.rs
