[package]
name = "agent-access-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
l402-lnd = ["briefcase-payments/l402-lnd"]
l402-cln = ["briefcase-payments/l402-cln"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

briefcase-dpop = { path = "../../crates/briefcase-dpop" }
briefcase-payments = { path = "../../crates/briefcase-payments" }

[dev-dependencies]
p256.workspace = true
reqwest.workspace = true
