[package]
name = "briefcase-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
pkcs11 = ["dep:cryptoki"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
cryptoki = { workspace = true, optional = true }
ed25519-dalek.workspace = true
p256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

briefcase-control-plane-api = { path = "../../crates/briefcase-control-plane-api" }
briefcase-core = { path = "../../crates/briefcase-core" }
briefcase-dpop = { path = "../../crates/briefcase-dpop" }
briefcase-policy = { path = "../../crates/briefcase-policy" }
