[package]
name = "briefcase-payment-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
l402-lnd = ["briefcase-payments/l402-lnd"]
l402-cln = ["briefcase-payments/l402-cln"]

[dependencies]
anyhow.workspace = true
briefcase-payments = { path = "../../crates/briefcase-payments" }
clap.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
tokio.workspace = true
