[package]
name = "briefcased"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
ed25519-dalek.workspace = true
jsonschema.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true

briefcase-api = { path = "../../crates/briefcase-api" }
briefcase-core = { path = "../../crates/briefcase-core" }
briefcase-identity = { path = "../../crates/briefcase-identity" }
briefcase-keys = { path = "../../crates/briefcase-keys" }
briefcase-mcp = { path = "../../crates/briefcase-mcp" }
briefcase-oauth-discovery = { path = "../../crates/briefcase-oauth-discovery" }
briefcase-payments = { path = "../../crates/briefcase-payments" }
briefcase-policy = { path = "../../crates/briefcase-policy" }
briefcase-receipts = { path = "../../crates/briefcase-receipts" }
briefcase-risk = { path = "../../crates/briefcase-risk" }
briefcase-sandbox = { path = "../../crates/briefcase-sandbox" }
briefcase-secrets = { path = "../../crates/briefcase-secrets" }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[build-dependencies]
wat = "1.244.0"
