[package]
name = "briefcased"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
l402-lnd = ["briefcase-payments/l402-lnd"]
l402-cln = ["briefcase-payments/l402-cln"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
ed25519-dalek.workspace = true
jsonschema.workspace = true
p256.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snow.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true

briefcase-api = { path = "../../crates/briefcase-api" }
briefcase-core = { path = "../../crates/briefcase-core" }
briefcase-dpop = { path = "../../crates/briefcase-dpop" }
briefcase-identity = { path = "../../crates/briefcase-identity" }
briefcase-keys = { path = "../../crates/briefcase-keys" }
briefcase-mcp = { path = "../../crates/briefcase-mcp" }
briefcase-oauth-discovery = { path = "../../crates/briefcase-oauth-discovery" }
briefcase-payments = { path = "../../crates/briefcase-payments" }
briefcase-policy = { path = "../../crates/briefcase-policy" }
briefcase-receipts = { path = "../../crates/briefcase-receipts" }
briefcase-risk = { path = "../../crates/briefcase-risk" }
briefcase-sandbox = { path = "../../crates/briefcase-sandbox" }
briefcase-secrets = { path = "../../crates/briefcase-secrets" }

[dev-dependencies]
hex.workspace = true
tempfile.workspace = true

[build-dependencies]
wat = "1.244.0"
