[package]
name = "briefcase-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

briefcase-core = { path = "../briefcase-core" }
briefcase-otel = { path = "../briefcase-otel" }

[target.'cfg(unix)'.dependencies]
hyperlocal.workspace = true
