[package]
name = "briefcase-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

briefcase-core = { path = "../briefcase-core" }
briefcase-control-plane-api = { path = "../briefcase-control-plane-api" }
briefcase-dpop = { path = "../briefcase-dpop" }
briefcase-keys = { path = "../briefcase-keys" }
briefcase-secrets = { path = "../briefcase-secrets" }
