[package]
name = "briefcase-control-plane-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
uuid.workspace = true

briefcase-core = { path = "../briefcase-core" }

