[package]
name = "briefcase-dpop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true
uuid.workspace = true

briefcase-keys = { path = "../briefcase-keys" }
