[package]
name = "briefcase-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

briefcase-core = { path = "../briefcase-core" }
briefcase-secrets = { path = "../briefcase-secrets" }

[dev-dependencies]
tokio.workspace = true
