[package]
name = "briefcase-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
apple = ["dep:tokio"]
pkcs11 = ["dep:cryptoki", "dep:tokio"]
tpm2 = ["dep:tempfile", "dep:tokio"]
windows = ["dep:tokio"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
cryptoki = { workspace = true, optional = true }
ed25519-dalek.workspace = true
hex.workspace = true
p256.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
uuid.workspace = true
zeroize.workspace = true

briefcase-core = { path = "../briefcase-core" }
briefcase-secrets = { path = "../briefcase-secrets" }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tokio.workspace = true
