[package]
name = "briefcase-payments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

# Real L402 lightning payments via LND gRPC.
l402-lnd = [
  "dep:prost",
  "dep:tonic",
  "dep:tonic-prost",
  "dep:http",
  "dep:hyper-util",
  "dep:tokio-rustls",
  "dep:tower",
]

# Real L402 lightning payments via Core Lightning JSON-RPC (Unix only).
l402-cln = ["dep:cln-rpc"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
hex.workspace = true
http = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
lightning-invoice.workspace = true
prost = { workspace = true, optional = true }
rand.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26.4", optional = true, default-features = false, features = ["ring", "tls12", "logging"] }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
url.workspace = true

[target.'cfg(unix)'.dependencies]
cln-rpc = { version = "0.5.0", optional = true }

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
