[package]
name = "briefcase-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde_json.workspace = true
url.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat = "1.244.0"
